# OpenVector

./: README.en.md  README.md  plan.md  pom.xml
model-core/: pom.xml
model-core/src/main/java/com/openvector/modelcore/: DataSource.java
model-core/src/main/java/com/openvector/modelcore/enums/: ModelType.java
model-core/src/main/java/com/openvector/modelcore/exception/: DataProcessingException.java  DataSourceNotFoundException.java  ModelProcessingException.java  UnsupportedDataTypeException.java
model-core/src/main/java/com/openvector/modelcore/interfaces/: ModelProvider.java  VectorizeData.java
model-parent/: pom.xml
model-provider/: pom.xml
model-provider/jdlib/Licenses/: Intel Math Kernel Library
model-provider/jdlib/face-dlib/: pom.xml
model-provider/jdlib/jni/: CMakeLists.txt  Jdlib.cpp  handlers.cpp  org.dromara_jdlib_Jdlib.h
model-test/: pom.xml
model-test/src/test/java/com/openvector/milvusplus/modeltest/: ModelTestApplicationTests.java
openvector-boot-starter/: pom.xml
openvector-boot-starter/src/main/java/com/openvector/boot/autoconfigure/: OpenVectorAutoConfiguration.java
openvector-core/: pom.xml
openvector-core/src/main/java/com/openvector/modelcore/: DataSource.java
openvector-core/src/main/java/com/openvector/modelcore/coordinator/: ModelCoordinator.java
openvector-core/src/main/java/com/openvector/modelcore/enums/: DataType.java  ModelType.java
openvector-db/: pom.xml
openvector-db/openvector-db-milvus-plus/: pom.xml
openvector-db/openvector-vectorex/: pom.xml
openvector-parent/: pom.xml
openvector-provider/: .flattened-pom.xml  pom.xml
openvector-provider/jdlib/: README.md
openvector-provider/jdlib/jni/: CMakeLists.txt  com_openvector_jdlib_Jdlib.h  handlers.hpp  utils.cpp  utils.hpp
openvector-provider/jdlib/openvector-face/: .flattened-pom.xml  pom.xml
openvector-test/: pom.xml
openvector-test/src/main/resources/: application.yml
openvector-test/vectorex/: vectorex.db
vector-db/: pom.xml
vector-db/DbMilvusPlus/: pom.xml
vector-db/VectoRex/: pom.xml
(+30 files in other folders)
